[package]
name = "adventofcode-2023"
version = "0.1.0"
edition = "2021"
categories = ["advent-of-code"]
keywords = ["advent-of-code"]
readme = "README.md"
license = "MIT"
description = "My solutions for Advent of Code 2023"
repository = "https://github.com/larsmoil/adventofcode-2023"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.8.0"
